k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ecom-production
spec:
  replicas: 2 # Run 2 copies for high availability
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: backend
        image: rnishant428/ecom-backend:APP_VERSION
        ports:
        - name: "5000"
          containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: ecom-production
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
